# oura-stream

./: .env  .gitignore  APP_TS_SECTION_ANALYSIS.json  index.html  oura-updater.key  oura-updater.key.pub  package-lock.json  package.json  test-r2.js
.github/workflows/: release.yml
cloudflare-worker/: worker.js  wrangler.toml
src/: firebase.ts  firestore.ts  main.ts  styles.css  upload.ts
src-tauri/: Cargo.toml  cargo_errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  storage.rs  streaming.rs  system.rs
src-tauri/src/models/: mod.rs
src/main/: app.ts  auth.ts  console.ts  dialogs.ts  drafts.ts  library.ts  matcha.ts  mylist.ts  navigation.ts  player.ts  state.ts  types.ts  updater.ts  watch.ts
src/styles/: app-layout.css  auth-page-container-cinematic-split-design.css  auth.css  buttons.css  custom-dialog-modal.css  custom-titlebar-auto-hide-reveal-on-hover.css  empty-state.css  form-elements.css  form-modal.css  glass-utility.css  in-app-console-log-modal.css  library.css  main-content.css  media-grid.css  modal-overlay.css  netflix-style-streaming-features.css  player-sidebar.css  player.css  reset-root.css  scrollbar.css  security-pin-modal-styles.css  settings-bundle.css  settings.css  shared.css  sidebar-widgets.css  sidebar.css  single-page-dashboard-no-vertical-scrolling.css  structure-builder-volumes-seasons.css  toast-notifications.css  top-bar-actions.css  top-bar.css  upload-view-preset-styles.css  upload-wizard-adapted-from-oura-upload-jsx.css  upload.css  video-player.css  (+2 more)
(+16 files in other folders)
