[package]
name = "oura-app"
version = "0.1.0"
description = "Oura Video Management and Player"
authors = ["Oura Developer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tauri-plugin-opener = "2.0.0"
tiny_http = "0.12"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
url = "2.5"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
