[package]
name = "oura-app"
version = "2.0.3"
description = "Oura Video Management and Player"
authors = ["Oura Developer"]
edition = "2021"

[lib]
name = "oura_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tauri-plugin-opener = "2.0.0"
tauri-plugin-process = "2.0.0"
tauri-plugin-updater = "2.0.0"
tiny_http = "0.12"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
url = "2.5"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
